--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,26 +24,22 @@ jobs:
 
   build-and-upload:
     needs: create-release
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-latest-arm64, windows-latest, macos-latest]
+        os: [linux-x64, linux-arm64, windows, macos]
         include:
-          - os: ubuntu-latest
+          - os: linux-x64
             asset_name: passcrypt-linux-x64
-            asset_path: dist/passcrypt-linux-x64
             upload_name: passcrypt-linux-x64
-          - os: ubuntu-latest-arm64
+          - os: linux-arm64
             asset_name: passcrypt-linux-arm64
-            asset_path: dist/passcrypt-linux-arm64
             upload_name: passcrypt-linux-arm64
-          - os: windows-latest
+          - os: windows
             asset_name: passcrypt-windows
-            asset_path: dist/passcrypt-windows.exe
             upload_name: passcrypt-windows.exe
-          - os: macos-latest
+          - os: macos
             asset_name: passcrypt-macos
-            asset_path: dist/passcrypt-macos
             upload_name: passcrypt-macos
 
     steps:
@@ -51,7 +47,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
@@ -61,8 +57,28 @@ jobs:
           pip install -r requirements.txt
           pip install pyinstaller
 
-      - name: Build binary
-        run: pyinstaller --onefile --name ${{ matrix.asset_name }} passcrypt.py
+      # 🐧 Cross-compile ARM64 using QEMU and Docker
+      - name: Build ARM64 binary (Docker emulation)
+        if: matrix.os == 'linux-arm64'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y qemu-user-static binfmt-support
+          docker run --rm -v $PWD:/src --platform linux/arm64 python:3.10 bash -c "
+            cd /src && pip install pyinstaller -r requirements.txt && \
+            pyinstaller --onefile --name passcrypt-linux-arm64 passcrypt.py
+          "
+
+      # 🖥️ Normal native builds for other platforms
+      - name: Build binary (x64/mac/win)
+        if: matrix.os != 'linux-arm64'
+        run: |
+          if [ '${{ matrix.os }}' = 'linux-x64' ]; then
+            pyinstaller --onefile --name passcrypt-linux-x64 passcrypt.py
+          elif [ '${{ matrix.os }}' = 'windows' ]; then
+            pyinstaller --onefile --name passcrypt-windows.exe passcrypt.py
+          elif [ '${{ matrix.os }}' = 'macos' ]; then
+            pyinstaller --onefile --name passcrypt-macos passcrypt.py
+          fi
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
@@ -70,6 +86,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ${{ matrix.asset_path }}
+          asset_path: dist/${{ matrix.upload_name }}
           asset_name: ${{ matrix.upload_name }}
           asset_content_type: application/octet-stream
+
